--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -9,7 +9,21 @@
 			</svg>
 		</button>
 
-		<div id="admin-sidebar" class="w-68 bg-[#A81B60] text-white flex flex-col fixed md:relative inset-y-0 right-0 z-40 transform translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out md:flex h-[calc(var(--vh)_*_100)] lg:h-screen md:overflow-hidden lg:overflow-y-auto px-4">
+		<div
+			id="admin-sidebar" class="w-68 bg-[#A81B60] text-white flex flex-col fixed md:relative inset-y-0 right-0 z-40 transform translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out md:flex h-[calc(var(--vh)_*_100)] lg:h-screen md:overflow-hidden lg:overflow-y-auto px-4 overflow-hidden">
+			<!-- Background Pattern -->
+			<div class="absolute inset-0 opacity-10 pointer-events-none">
+				<div class="absolute inset-0" style="background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, white 35px, white 36px);"></div>
+				<div class="absolute inset-0" style="background-image: repeating-linear-gradient(-45deg, transparent, transparent 50px, white 50px, white 51px);"></div>
+			</div>
+
+			<!-- Random Decorative Lines -->
+			<div class="absolute inset-0 overflow-hidden pointer-events-none opacity-20">
+				<div class="absolute w-px h-64 bg-white rotate-[30deg] -top-12 left-[15%]"></div>
+				<div class="absolute w-px h-96 bg-white rotate-[60deg] -bottom-24 left-[40%]"></div>
+				<div class="absolute w-px h-64 bg-white rotate-[-45deg] top-1/2 right-[10%]"></div>
+				<div class="absolute w-px h-48 bg-white rotate-[15deg] bottom-10 right-[30%]"></div>
+			</div>
 
 			<div class="md:hidden flex justify-start p-4">
 				<button id="admin-sidebar-close" class="text-white hover:text-gray-300">
