--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -78,7 +78,7 @@
 
 			{% if article.content %}
 				<!-- Content -->
-				<div class="bg-pink-50 rounded-3xl p-6 md:p-12 shadow-sm border-2 border-pink-600">
+				<div class="bg-pink-50 rounded-3xl p-6 md:p-12 shadow-sm border border-[#FECDD3]">
 					<div class="prose prose-lg prose-rose max-w-none mx-auto text-gray-700 leading-relaxed text-justify mb-8 [&_*]:!bg-transparent">
 						{{ article.content|raw }}
 					</div>
