--- a/templates/contenu_numero/show.html.twig
+++ b/templates/contenu_numero/show.html.twig
@@ -20,7 +20,7 @@
 			</div>
 
 			<!-- Content -->
-			<div class="bg-pink-50 rounded-3xl p-6 md:p-12 shadow-sm border-2 border-pink-600">
+			<div class="bg-pink-50 rounded-3xl p-6 md:p-12 shadow-sm border border-[#FECDD3]">
 				<div class="prose prose-lg prose-rose max-w-none mx-auto text-gray-700 leading-relaxed text-justify">
 					{{ contenuNumero.content|raw }}
 				</div>
