--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 	<div class="flex md:h-[94vh]" dir="rtl" lang="ar">
-		<button id="admin-mobile-menu-button" class="md:hidden fixed top-4 right-4 z-50 bg-primary-600 text-white p-2 rounded-md">
+		<button id="admin-mobile-menu-button" class="md:hidden fixed top-4 right-4 z-50 bg-[#A81B60] text-white p-2 rounded-md">
 			<svg class="w-6 h-6" fill="none" stroke="currentColor" viewbox="0 0 24 24">
 				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
 			</svg>
