--- a/templates/auth.html.twig
+++ b/templates/auth.html.twig
@@ -4,11 +4,18 @@
 	<div
 		class="min-h-screen flex flex-col md:flex-row bg-gray-50/50">
 		<!-- Form Section -->
-		<div class="w-full md:w-1/2 min-h-screen bg-white flex flex-col justify-center px-6 sm:px-12 lg:px-20 py-12 relative z-10 shadow-2xl">
+		<div class="w-full md:w-1/2 min-h-screen bg-white flex flex-col justify-center px-6 sm:px-8 lg:px-20 py-8 relative z-10 shadow-2xl">
 			<div class="max-w-md mx-auto w-full">
 
 
-				<div class="flex-1">
+				<div
+					class="flex-1">
+					<!-- Mobile Logo -->
+					<a href="{{ path('home') }}">
+						<div class="md:hidden flex justify-center mb-8">
+							<img src="{{ asset('build/images/logo-pink.svg') }}" alt="Logo" class="w-32 h-32">
+						</div>
+					</a>
 					{% block content %}{% endblock %}
 				</div>
 			</div>
