--- a/templates/home/sections/authors.html.twig
+++ b/templates/home/sections/authors.html.twig
@@ -1,5 +1,5 @@
 <!-- Opinion Writers Section -->
-<section class="py-24 bg-gray-50">
+<section class="py-24 bg-gray-50" id="writers">
 	<div class="max-w-7xl mx-auto px-6">
 		<h2 class="text-5xl font-bold text-center mb-4">
 			<span class="pink-underline">كتاب الرأي</span>
